# shoptimize

./: CMakeLists.txt  README.md
config/: example.yaml
include/: amount.hpp  config.hpp  constraint.hpp  meal.hpp  product.hpp  solver.hpp  store.hpp
src/: CMakeLists.txt  config.cpp  constraint.cpp  main.cpp  meal.cpp  product.cpp  solver.cpp  store.cpp
